// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProxyStatusList when status is synced match the snapshot 1`] = `<div />`;

exports[`ProxyStatusList when there are components without value match the snapshot 1`] = `
<div>
  <div
    class="pf-v6-l-stack kiali_f14kfh0p"
  >
    <div
      class="pf-v6-l-stack__item kiali_fsmbsvg"
    >
      Istio Proxy Status
    </div>
    <div
      class="pf-v6-l-stack__item kiali_f1wsrw0w"
    >
      CDS: -
    </div>
    <div
      class="pf-v6-l-stack__item kiali_f1wsrw0w"
    >
      RDS: -
    </div>
  </div>
</div>
`;

exports[`ProxyStatusList when there are unsynced components match the snapshot 1`] = `
<div>
  <div
    class="pf-v6-l-stack kiali_f14kfh0p"
  >
    <div
      class="pf-v6-l-stack__item kiali_fsmbsvg"
    >
      Istio Proxy Status
    </div>
    <div
      class="pf-v6-l-stack__item kiali_f1wsrw0w"
    >
      CDS: NOT_SENT
    </div>
    <div
      class="pf-v6-l-stack__item kiali_f1wsrw0w"
    >
      RDS: STALE
    </div>
  </div>
</div>
`;
